--- a/test/test_map.rdl
+++ b/test/test_map.rdl
@@ -174,6 +174,43 @@ addrmap root_map {
 		shared_reg_2 shared_reg_2;
 	};
 
+	regfile regfile_test2{
+		reg shared_reg_1{
+			shared;
+			name = "SHARED";
+			desc = "xxx";
+			regwidth = 32;
+			field {
+				name = "FIELD_1";
+				desc = "xxx";
+				sw = rw;
+			} FIELD_1[16:14] = 0x0;
+			field {
+				name = "FIELD_1";
+				desc = "xxx";
+				sw = rw;
+			} FIELD_2[13:12] = 0x0;
+		};
+		reg shared_reg_2{
+			shared;
+			name = "SHARED";
+			desc = "xxx";
+			regwidth = 32;
+			field {
+				name = "FIELD_1";
+				desc = "xxx";
+				sw = rw;
+			} FIELD_1[16:14] = 0x0;
+			field {
+				name = "FIELD_1";
+				desc = "xxx";
+				sw = rw;
+			} FIELD_2[13:12] = 0x0;
+		};
+		shared_reg_1 shared_reg_1;
+		shared_reg_2 shared_reg_2;
+	};
+
 	addrmap test_map_2 {
 		hj_gendisp = false;
 		hj_genslv = false;
