--- a/generators/rtl/templates/regmst_template.jinja
+++ b/generators/rtl/templates/regmst_template.jinja
@@ -1,4 +1,4 @@
-`include "xregister.vh"
+`include "field_attr.vh"
 `default_nettype none
 module {{get_rtl_name(mst_node)}} (
     // regmst is at register native clock domain
