--- a/generators/rtl/templates/filelist_template.jinja
+++ b/generators/rtl/templates/filelist_template.jinja
@@ -1,5 +1,5 @@
 $(call declare-mod,{{top_name}})
-$(call add,rtl,{{top_name}},
+$(call add,rtl,{{top_name}}, \
     {%- for file in filelist %}
     $({{os_env}})/rtl/{{file}}{% if not loop.last %} \{% else %}){% endif %}
     {%- endfor %}
