rename regmst and regdisp ports in templates

--- a/generators/rtl/templates/regmst_template.jinja
+++ b/generators/rtl/templates/regmst_template.jinja
@@ -1,22 +1,25 @@
+{%- set mst_name = get_rtl_name(mst_node) -%}
+{%- set disp_name = get_rtl_name(disp_node) -%}
+{%- set prefix_o = mst_name + "__" + disp_name -%}
+{%- set prefix_i = disp_name + "__" + mst_name -%}
 `include "field_attr.vh"
 `default_nettype none
-module {{get_rtl_name(mst_node)}} (
-    // regmst is at register native clock domain
-    clk, rst_n,
+module {{mst_name}} (
     // APB interface to upstream SoC interconnect
-    psel, penable, pready, pslverr, pwrite, paddr, pwdata, prdata,
+    pclk, presetn, psel, penable, pready, pslverr, pwrite, paddr, pwdata, prdata,
     // reg_native_if to the downstream regdisp module
-    ext_req_vld, ext_ack_vld, ext_err, ext_wr_en, ext_rd_en, ext_addr, ext_wr_data, ext_rd_data,
-    // soft reset signal to downstream modules
-    ext_soft_rst
+    {{prefix_o}}__req_vld, {{prefix_i}}__ack_vld,
+    {{prefix_i}}__err, {{prefix_o}}__wr_en,
+    {{prefix_o}}__rd_en, {{prefix_o}}__addr,
+    {{prefix_o}}__wr_data, {{prefix_i}}__rd_data,
+    {{prefix_o}}__soft_rst
 );
     parameter       ADDR_WIDTH  = {{get_addr_width(mst_node)}};
     parameter       DATA_WIDTH  = {{get_data_width(mst_node)}};
     localparam      REG_NUM     = 4;
 
-    input   logic                       clk;
-    input   logic                       rst_n;
-
+    input   logic                       pclk;
+    input   logic                       presetn;
     input   logic                       psel;
     input   logic                       penable;
     output  logic                       pready;
@@ -26,15 +29,15 @@ module {{get_rtl_name(mst_node)}} (
     input   logic   [DATA_WIDTH-1:0]    pwdata;
     output  logic   [DATA_WIDTH-1:0]    prdata;
 
-    output  logic                       ext_req_vld;
-    input   logic                       ext_ack_vld;
-    input   logic                       ext_err;
-    output  logic                       ext_wr_en;
-    output  logic                       ext_rd_en;
-    output  logic   [ADDR_WIDTH-1:0]    ext_addr;
-    output  logic   [DATA_WIDTH-1:0]    ext_wr_data;
-    input   logic   [DATA_WIDTH-1:0]    ext_rd_data;
-    output  logic                       ext_soft_rst;
+    output  logic                       {{prefix_o}}__req_vld;
+    input   logic                       {{prefix_i}}__ack_vld;
+    input   logic                       {{prefix_i}}__err;
+    output  logic                       {{prefix_o}}__wr_en;
+    output  logic                       {{prefix_o}}__rd_en;
+    output  logic   [ADDR_WIDTH-1:0]    {{prefix_o}}__addr;
+    output  logic   [DATA_WIDTH-1:0]    {{prefix_o}}__wr_data;
+    input   logic   [DATA_WIDTH-1:0]    {{prefix_i}}__rd_data;
+    output  logic                       {{prefix_o}}__soft_rst;
 
     logic   [REG_NUM-1:0]               dec_db_reg_sel;
     logic                               dec_ext_sel;
@@ -135,8 +138,8 @@ module {{get_rtl_name(mst_node)}} (
     mst_fsm #(
         .ADDR_WIDTH(ADDR_WIDTH), .DATA_WIDTH(DATA_WIDTH))
     mst_fsm (
-        .clk                    (clk),
-        .rst_n                  (rst_n),
+        .pclk                   (pclk),
+        .presetn                (presetn),
         .psel                   (psel),
         .penable                (penable),
         .pready                 (pready),
@@ -147,19 +150,19 @@ module {{get_rtl_name(mst_node)}} (
         .prdata                 (prdata),
         .fsm_req_vld            (fsm_req_vld),
         .fsm_ack_vld            (fsm_ack_vld),
-        .err_acc_dummy          (err_acc_dummy),
         .fsm_addr               (fsm_addr),
         .fsm_wr_en              (fsm_wr_en),
         .fsm_rd_en              (fsm_rd_en),
         .fsm_wr_data            (fsm_wr_data),
         .fsm_rd_data            (fsm_rd_data),
+        .err_acc_dummy          (err_acc_dummy),
         .tmr_tmout              (tmr_tmout),
         .tmr_rst                (tmr_rst)
     );
 
 //*******************************************TIMER*****************************************************//
-    always_ff @(posedge clk or negedge rst_n) begin
-        if (!rst_n || tmr_rst)
+    always_ff @(posedge pclk or negedge presetn) begin
+        if (!presetn || tmr_rst)
             tmr_cnt <= {DATA_WIDTH{1'b0}};
         else if (tmr_cnt < db_regs_tmr_thr_o)
             tmr_cnt <= tmr_cnt + 1'b1;
@@ -193,8 +196,8 @@ module {{get_rtl_name(mst_node)}} (
         .HW_TYPE                (`HW_RW),
         .PRECEDENCE             (`SW))
     x__db_regs_err_addr__ADDR (
-        .clk                    (clk),
-        .rst_n                  (rst_n),
+        .clk                    (pclk),
+        .rst_n                  (presetn),
         .sync_rst               (1'b0),
         .sw_wr_data             (db_regs_err_addr_snapshot_reg_wr_data[63:0]),
         .sw_rd                  (db_regs_err_addr_snapshot_reg_rd_en),
@@ -220,9 +223,9 @@ module {{get_rtl_name(mst_node)}} (
 
     snapshot_reg #(.DATA_WIDTH(32), .REG_WIDTH(64))
     db_regs_err_addr_snapshot (
-        .clk                    (clk),
-        .rst_n                  (rst_n),
-        .soft_rst               (ext_soft_rst),
+        .clk                    (pclk),
+        .rst_n                  (presetn),
+        .soft_rst               ({{prefix_o}}__soft_rst),
         .snap_wr_en             (db_regs_err_addr_snapshot_snap_wr_en),
         .snap_rd_en             (db_regs_err_addr_snapshot_snap_rd_en),
         .snap_wr_data           (db_regs_err_addr_snapshot_snap_wr_data),
@@ -249,8 +252,8 @@ module {{get_rtl_name(mst_node)}} (
         .HW_TYPE                (`HW_RW),
         .PRECEDENCE             (`SW))
     x__db_regs_tmr_thr__CNT (
-        .clk                    (clk),
-        .rst_n                  (rst_n),
+        .clk                    (pclk),
+        .rst_n                  (presetn),
         .sync_rst               (1'b0),
         .sw_wr_data             (db_regs_tmr_thr_wr_data[31:0]),
         .sw_rd                  (db_regs_tmr_thr_rd_en),
@@ -286,8 +289,8 @@ module {{get_rtl_name(mst_node)}} (
         .HW_TYPE                (`HW_RW),
         .PRECEDENCE             (`SW))
     x__db_regs_err_stat__SOFT_RST (
-        .clk                    (clk),
-        .rst_n                  (rst_n),
+        .clk                    (pclk),
+        .rst_n                  (presetn),
         .sync_rst               (1'b0),
         .sw_wr_data             (db_regs_err_stat_wr_data[0:0]),
         .sw_rd                  (db_regs_err_stat_rd_en),
@@ -301,7 +304,7 @@ module {{get_rtl_name(mst_node)}} (
         .field_value            (db_regs_err_stat__SOFT_RST__curr_value)
     );
     // soft reset signal is from register db_regs_err_stat bit 0 (SOFT_RST)
-    assign  ext_soft_rst          = db_regs_err_stat__SOFT_RST__curr_value;
+    assign  {{prefix_o}}__soft_rst          = db_regs_err_stat__SOFT_RST__curr_value;
 
     field #(
         .F_WIDTH                (1),
@@ -312,8 +315,8 @@ module {{get_rtl_name(mst_node)}} (
         .HW_TYPE                (`HW_RW),
         .PRECEDENCE             (`SW))
     x__db_regs_err_stat__ERR_OCCUR (
-        .clk                    (clk),
-        .rst_n                  (rst_n),
+        .clk                    (pclk),
+        .rst_n                  (presetn),
         .sync_rst               (1'b0),
         .sw_wr_data             (db_regs_err_stat_wr_data[1:1]),
         .sw_rd                  (db_regs_err_stat_rd_en),
@@ -339,10 +342,10 @@ module {{get_rtl_name(mst_node)}} (
         .HW_TYPE                (`HW_RW),
         .PRECEDENCE             (`SW))
     x__db_regs_err_stat__ERR_TYPE (
-        .clk                    (clk),
-        .rst_n                  (rst_n),
+        .clk                    (pclk),
+        .rst_n                  (presetn),
         .sync_rst               (1'b0),
-        .sw_wr_data             (db_regs_err_stat_wr_data[2:2]),
+        .sw_wr_data             (db_regs_err_stat_wr_data[3:2]),
         .sw_rd                  (db_regs_err_stat_rd_en),
         .sw_wr                  (db_regs_err_stat_wr_en),
         .write_protect_en       (1'b0),
@@ -379,8 +382,8 @@ module {{get_rtl_name(mst_node)}} (
         .WIDTH(DATA_WIDTH), .CNT(REG_NUM+1),
         .GROUP_SIZE(128), .SKIP_DFF_0(1), .SKIP_DFF_1(1))
     int_rd_split_mux (
-        .clk                    (clk),
-        .rst_n                  (rst_n),
+        .clk                    (pclk),
+        .rst_n                  (presetn),
         .din                    (int_rd_split_mux_din),
         .sel                    (int_rd_split_mux_sel),
         .dout                   (int_rd_data),
@@ -411,16 +414,16 @@ module {{get_rtl_name(mst_node)}} (
     assign  db_regs_err_stat_rd_en           = db_reg_rd_sel[3];
 
     // ultimate multiplexor to mst_fsm: ack_vld, rd_data, err
-    assign  fsm_rd_data                 = int_ack_vld ? int_rd_data : (ext_ack_vld ? ext_rd_data : {DATA_WIDTH{1'b0}});
-    assign  fsm_ack_vld                 = int_ack_vld | ext_ack_vld;
-    assign  ext_err_acc_dummy           = ext_err;
+    assign  fsm_rd_data                 = int_ack_vld ? int_rd_data : ({{prefix_i}}__ack_vld ? {{prefix_i}}__rd_data : {DATA_WIDTH{1'b0}});
+    assign  fsm_ack_vld                 = int_ack_vld | {{prefix_i}}__ack_vld;
+    assign  ext_err_acc_dummy           = {{prefix_i}}__err;
     assign  err_acc_dummy               = int_err_acc_dummy | ext_err_acc_dummy;
 
     // ultimate inverse multiplexor: to the external downstream regdisp module
-    assign  ext_req_vld                 = fsm_req_vld & dec_ext_sel;
-    assign  ext_wr_en                   = fsm_wr_en & dec_ext_sel;
-    assign  ext_rd_en                   = fsm_rd_en & dec_ext_sel;
-    assign  ext_addr                    = dec_ext_sel ? fsm_addr : {ADDR_WIDTH{1'b0}};
-    assign  ext_wr_data                 = dec_ext_sel ? fsm_wr_data : {DATA_WIDTH{1'b0}};
+    assign  {{prefix_o}}__req_vld       = fsm_req_vld & dec_ext_sel;
+    assign  {{prefix_o}}__wr_en         = fsm_wr_en & dec_ext_sel;
+    assign  {{prefix_o}}__rd_en         = fsm_rd_en & dec_ext_sel;
+    assign  {{prefix_o}}__addr          = dec_ext_sel ? fsm_addr : {ADDR_WIDTH{1'b0}};
+    assign  {{prefix_o}}__wr_data       = dec_ext_sel ? fsm_wr_data : {DATA_WIDTH{1'b0}};
 endmodule
 `default_nettype wire
